@@ -520,6 +520,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15579) clshow considers all categories !hidden
 * (bug 16647) list=allcategories, prop=categories don't return "hidden"
   property for hidden categories
+* New siprop parameter of 'extensions' to list all installed extensions
 
 === Languages updated in 1.14 ===
 
